stability and performance optimizations. swagger definition updated too
